# vtkm_KBcode

./: README.md
KBdoc/: experiments.txt  template.tex
KBdoc/EGPGV_Marsaglia/: Makefile  biblio.bib  body.inc  conclusion.tex  egpgv19.aux  egpgv19.bbl  egpgv19.blg  egpgv19.brf  egpgv19.tex  experiment.tex  pgv19.sty  relatedwork.tex  results.tex  strategies.tex
KBdoc/EGPGV_Marsaglia/.svn/: wc.db
KBdoc/Experiment/: KB.sty  KB.tex  Makefile  main.tex  references.bib
MarchingCube/: CMakeCache.txt  CMakeLists.txt  Makefile  MarchingCubes.cxx  a.out  cmake_install.cmake
MultiDevice/: CMakeCache.txt  CMakeLists.txt  Makefile  SwitchDevice  SwitchDevice.cxx  a.out  cmake_install.cmake
MultiDevice/original/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  oriSwitchDevice  oriSwitchDevice.cxx
R_Particle_Advection/: CMakeLists.txt  README  bashPA2script2  bashPAscript  old_particleAdvection.cxx  output.txt  particleAdvect.cxx  particles_array.h  testInteg.cxx
particle_advection/: CMakeCache.txt  CMakeLists.txt  Makefile  ParticleAdvection.cxx  a.out  astro.bov  cmake_install.cmake  config
